--- a/src/seq/Makefile
+++ b/src/seq/Makefile
@@ -1,9 +1,8 @@
 # Makefile for sequential version of ADDA package
 # All options are defined in Makefile
-# $Author$
 # $Date::                            $
 #
-# Copyright (C) 2010 Institute of Chemical Kinetics and Combustion & University of Amsterdam
+# Copyright (C) 2010-2011 ADDA contributors
 # This file is part of ADDA.
 #
 # ADDA is free software: you can redistribute it and/or modify it under the terms of the GNU
